<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="ProfileBinding">
        <variable
            name="VM"
            type="ir.pitok.cafe.viewModels.ProfileViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <include
            layout="@layout/item_toolbar"
            android:id="@+id/PRFToolbar"/>

        <ImageView
            android:id="@+id/PRFShadow"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/toolbar_shadow_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PRFToolbar"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/PRFUsernameEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorTextIcon"
            android:hint="@string/username"
            android:textColorHint="@color/colorTextIcon"
            android:fontFamily="@font/is"
            android:textSize="13dp"
            android:padding="8dp"
            android:background="@drawable/rc_st_round_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PRFToolbar"
            tools:ignore="Autofill,SpUsage,TextFields" />

        <EditText
            android:id="@+id/PRFPhoneNumberEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/phone_number"
            android:textColor="@color/colorTextIcon"
            android:textColorHint="@color/colorTextIcon"
            android:fontFamily="@font/is"
            android:textSize="13dp"
            android:padding="8dp"
            android:background="@drawable/rc_st_round_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PRFUsernameEt"
            tools:ignore="Autofill,SpUsage,TextFields" />

        <Button
            android:id="@+id/PRFEditBt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rc_round_white"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="13dp"
            android:fontFamily="@font/is"
            android:text="@string/edit"
            app:layout_constraintTop_toBottomOf="@+id/PRFPhoneNumberEt"
            tools:ignore="SpUsage" />

        <ProgressBar
            android:id="@+id/PRFEditLoading"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="invisible"
            android:theme="@style/BrownProgressBarTheme"
            app:layout_constraintBottom_toBottomOf="@+id/PRFEditBt"
            app:layout_constraintEnd_toEndOf="@+id/PRFEditBt"
            app:layout_constraintStart_toStartOf="@+id/PRFEditBt"
            app:layout_constraintTop_toTopOf="@+id/PRFEditBt"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>