<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ItemOrderBinding">
        <variable
            name="VM"
            type="ir.pitok.cafe.viewModels.OrdersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorTextIcon"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/IOHeader"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@drawable/rc_top_round16_brown"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/IODate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:fontFamily="@font/is"
                        android:textColor="@color/colorTextIcon"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlHardcoded,SpUsage" />

                    <TextView
                        android:id="@+id/IOTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:fontFamily="@font/is"
                        android:textColor="@color/colorTextIcon"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlHardcoded,SpUsage" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/IOHeader">

                    <TextView
                        android:id="@+id/IOLocationLable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="@font/is_bold"
                        android:text="@string/location_colon"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="13dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlHardcoded,SpUsage" />

                    <TextView
                        android:id="@+id/IOLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/is"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="@+id/IOLocationLable"
                        app:layout_constraintRight_toLeftOf="@+id/IOLocationLable"
                        app:layout_constraintTop_toTopOf="@+id/IOLocationLable"
                        tools:ignore="RtlHardcoded,SpUsage" />

                    <TextView
                        android:id="@+id/IOAmountLable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="@font/is_bold"
                        android:text="@string/amount_colon"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="13dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/IOLocationLable"
                        tools:ignore="RtlHardcoded,SpUsage" />

                    <TextView
                        android:id="@+id/IOAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/is"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="@+id/IOAmountLable"
                        app:layout_constraintRight_toLeftOf="@+id/IOAmountLable"
                        app:layout_constraintTop_toTopOf="@+id/IOAmountLable"
                        tools:ignore="RtlHardcoded,SpUsage" />

                    <TextView
                        android:id="@+id/IOCountLable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/is_bold"
                        android:text="@string/count_colon"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/IOAmountLable"
                        tools:ignore="RtlHardcoded,SpUsage" />

                    <TextView
                        android:id="@+id/IOCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/is"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="13dp"
                        app:layout_constraintBottom_toBottomOf="@+id/IOCountLable"
                        app:layout_constraintRight_toLeftOf="@+id/IOCountLable"
                        app:layout_constraintTop_toTopOf="@+id/IOCountLable"
                        tools:ignore="RtlHardcoded,SpUsage" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/IODetails"
                        android:fontFamily="@font/is_bold"
                        android:visibility="invisible"
                        android:padding="8dp"
                        android:layout_marginLeft="8dp"
                        android:textSize="13dp"
                        android:text="@string/details"
                        android:textColor="@android:color/holo_green_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>